--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="permission_fail">权限申请失败</string>
     <string name="me">我</string>
     <string name="WXTalk">维信通广对讲</string>
-    <string name="settings">设置</string>
+    <string name="open_float_talk">打开悬浮对讲</string>
+    <string name="close_float_talk">关闭悬浮对讲</string>
     <string name="exit">退出</string>
 </resources>
